--- a/react-textarea/public/css/style.css
+++ b/react-textarea/public/css/style.css
@@ -31,15 +31,17 @@ aside {
   display: none; }
 
 .modify, .editbox > div, .editbox > input {
+  width: 100%;
   box-sizing: border-box;
   height: 30px;
   line-height: 30px;
-  padding: 4px; }
+  padding: 0 4px; }
 
 .editbox {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   box-sizing: border-box;
-  font-size: 16px; }
+  font-size: 16px;
+  padding: 4px 0; }
   .editbox > input {
     border: none;
     display: none;
